# apriori

./: 4d.drawio  Cargo.toml  current-layer.drawio  dfd.drawio  hermite.drawio  layers.drawio  log.txt  myobjs.txt
src/: app.rs  cli.rs  db.rs  error.rs  graphics.rs  layer.rs  logger.rs  main.rs  math.rs  object.rs  shared.rs  type.rs
src/engine/: actor.rs  context.rs  math.rs  mod.rs  scene.rs  util.rs
src/engine/context/: db_util.rs  mod.rs  time_range.rs
src/engine/phys/: collision.rs  mod.rs
src/message/: layer.rs  messages_macro.rs  mod.rs
src/scene/: attractor.rs  mod.rs  object.rs  physics.rs  ringbuffer.rs  track.rs
src/scene/engine/: collision.rs  mod.rs  uncomputed.rs
src/scene/physics/: mod.rs  task.rs  uncomputed.rs
src/sql/: setup_schema.sql
src/sql/setup/: session.sql  session_triggers.sql
src/storage/: attractor.rs  layer.rs  location.rs  mod.rs  object.rs  session.rs
src/storage/sql/oss/: add_occupied_space.sql  check_possible_collisions.sql  delete_future_occupied_space.sql  delete_past_occupied_space.sql
src/storage/sql/setup/: attractor.sql  layer.sql  layer_triggers.sql  location.sql  location_triggers.sql  object.sql  session.sql  session_triggers.sql
src/storage/sql/setup/master/: attractor.sql  object.sql  session.sql  session_triggers.sql
src/storage/sql/setup/oss/: add_occupied_space.sql  occupied_space.sql
