[package]
name = "apriori"
version = "0.1.0"
authors = ["Daniel Shiposha <shipdan@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23"
structopt = "0.3.13"
lazy_static = "1.4.0"
css-color-parser = "0.1.2"
rustyline = "6.0.0"
log = "0.4.8"
regex = "1.3.7"
chrono = "0.4"
rand = "0.7.3"
phf = { version = "0.8", features = ["macros"] }
r2d2_sqlite = { git = "https://github.com/MrShiposha/r2d2-sqlite.git" }
r2d2_postgres = { git = "https://github.com/MrShiposha/r2d2-postgres.git" }
r2d2 = "*"
threadpool = "1.7.1"
rusqlite = "*"
postgres = "*"
postgres-types = { version = "*", features=["derive"] }
time = "*"
clap = "*"
nalgebra = "*"